- added: download content from URL in framework.fs.create...
- added: parse resource/configuration from a string - string.configuration()
- added: async.cancel()
- added: framework.on('websocket-begin')
- added: framework.on('websocket-end')
- added: controller.uri
- added: MailMessage.from() alias for MailMessage.sender()

- updated: default port: port || process.env.PORT || 8000
- updated: default framework.onMeta()
- updated: framework.init() - default IP is 127.0.0.1
- updated: controller.cancel() (added async.cancel)
- updated: utils.request() (added return Boolean)
- updated: utils.random(max, min)
- updated: completely rewritten utils.async()

- fixed: FrameworkFileSystem class
- fixed: view render
- fixed: FrameworkCache.fn()
- fixed: FrameworkCache.recycle()
- fixed: utils.reduce()
- fixed: utils.base64ToFile()
- fixed: @{canonical}, @{next}, @{prev}, @{prefetch}, @{prerender}

!!! IMPORTANT !!!

- renamed: websocket event websocket-connection -> websocket-beg
- renamed: controller.lastEventID -> contrlloler.sseID
- renamed: framework.inject() to framework.injectModule()
- renamed: framework.path.backup() -> framework.path.backups()
- renamed: controller.statusCode –> controller.status
- renamed: String.prototype.maxLength() -> String.prototype.max()

improvements
clean code

======= 1.2.6

- added: new options parameter - framework.run(http/https, debug, [port], [ip], [options])
- added: static-accepts - .map, .ogg, .mp3, .webp, .swf

- updated: framework.route() and framework.websocket(), Example: framework.route('/', fn, { flags: [], length: 3430, timeout: 3400 });
- updated: utils.getContentType() - .webp
- updated: nosql

- fixed: views current routing
- fixed: websocket session and user
- fixed: controller.session and controller.user

- renamed: [backup] directory to [backups]

======= 1.2.5

- I believe that this is the final version. From now I'll writing only documentation and some tutorials.