@@ -19,6 +19,7 @@ IN DEVELOPMENT ======= 1.2.7
 - added: framework.on('websocket-end')
 - added: controller.uri
 - added: MailMessage.from() alias for MailMessage.sender()
+- added: HttpRequest.authorization()
 
 - updated: default port: port || process.env.PORT || 8000
 - updated: default framework.onMeta()
